public/assets/css/style.css
html {
	height: 100%;
}

body {
	background-color: #111111;
	color: white;
	font-family: 'Questrial', sans-serif;
	min-height: 100%;
	position: relative;
	padding-bottom: 75px;
}

#navBar {
	margin-bottom: 0;
	background-color: black;
}

#menuItem1, #menuItem2 {
	margin-right: 35px;
}


.btn-custom {
	color: white;
	background-color: #540511;
}

.btn-custom:hover {
	color: white;
}

.btn-custom:focus {
	color: white;
	outline: none;
}

.btn-customB {
	background-color: #282e5b;
}

.btn-customC {
	background-color: #282e5b;
	margin-bottom: 20px;
	margin-left: 15px;
}

#noResult {
	margin-bottom: 250px;
}

#error {
	margin-bottom: 250px;
}

#resultBox {
	background-color: #222222;
	margin-top: 20px;
	margin-bottom: 50px;
	border-style: outset;
	border-radius: 10px;
}

.rateSelect {
	padding-left: 0;
	margin-bottom: 10px;
}

#movieForm {
	margin-bottom: 20px;
}

.poster {
	float: left;
	margin-right: 20px;
	margin-bottom: 20px;
}

.reviewPosters {
	float: left;
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 10px;
	margin-top: 10px;
}

.reviewBoxes {
	background-color: #222222;
	border-style: outset;
	border-radius: 10px;
	margin-bottom: 20px;
}

#reviewHeading {
	margin-left: 20px;
}

#noReviews {
	margin-bottom: 332px;
}

#listContainer {
	margin-bottom: 150px;
}

ol {
	list-style-position: inside;
}

.jumbotron {
	background-color: #540511;
	color: white;
	text-align: center;
	border-top-style: outset;
	border-bottom-style: outset;
	border-right-style: none;
	border-left-style: none;
}

.night-hotel {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  padding: 20px;
  border: none;
  font: normal 60px/1 "Monoton", Helvetica, sans-serif;
  color: rgba(255,255,255,1);
  text-align: center;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  text-shadow: 0 0 10px rgb(255,255,255) , 0 0 20px rgb(255,255,255) , 0 0 30px rgb(255,255,255) , 0 0 40px rgb(255,17,119) , 0 0 70px rgb(255,17,119) , 0 0 80px rgb(255,17,119) , 0 0 100px rgb(255,17,119) , 0 0 150px rgb(255,17,119) ;
  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
}

.night-hotel:hover {
  text-shadow: 0 0 5px rgb(255,255,255) , 0 0 10px rgb(255,255,255) , 0 0 15px rgb(255,255,255) , 0 0 20px rgb(255,17,119) , 0 0 35px rgb(255,17,119) , 0 0 40px rgb(255,17,119) , 0 0 50px rgb(255,17,119) , 0 0 75px rgb(255,17,119) ;
}

#bottomRow {
	margin-bottom: 0;
}

.footer {
	height: 85px;
	background-color: black;
	width: 100%;
	bottom: 0;
	position: absolute;
}

#reactIcon {
	float: left;
	margin-right: 7px;
	margin-top: 4px;
}

